# rmce

./: .gitignore  Cargo.toml  build.rs  keypair_randombytes.txt
lib/: mceliece.lib  mceliece.lib1
src/: lib.rs  test.rs
src/impls/: int32_sort.rs  libkeccak.rs  mod.rs  uint64_sort.rs
src/impls/me8192128f/: benes.rs  benes_mat_13.in  bm.rs  controlbits.rs  decrypt.rs  encrypt.rs  gf.rs  mod.rs  operations.rs  params.rs  pk_gen.rs  root.rs  sk_gen.rs  synd.rs  transpose.rs  util.rs
src/impls/subroutines/: crypto_declassify.rs  crypto_int.rs  crypto_uint.rs  mod.rs
tests/: against_c_impl.rs  invalid_inputs.rs  openssl_random_provider.rs  results.txt  test_against_c_impl.rs
tests/resources/: encrypt_randombytes.in  results.in
