[package]
name = "rmce"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfor = "1.1.0"
openssl = { version = "0.10.45", optional = true }

[features]
default = ["openssl"]
openssl = ["dep:openssl"]
