[package]
name = "rmce"
version = "0.1.0"
edition = "2021"

authors = ["Andrey Sakhar <a@sakhar.ru>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/asakhar/rmce"
homepage = "https://github.com/asakhar/rmce"
description = "Implementation of Classic McEliece cryptosystem in Rust"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfor = "1.1.0"
openssl = { version = "0.10.45", optional = true, default_features = false }

[features]
default = ["openssl"]
openssl = ["dep:openssl"]
