[package]
name = "rmce"
version = "0.1.0"
edition = "2021"

authors = ["Andrey Sakhar <a@sakhar.ru>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/asakhar/rmce"
homepage = "https://github.com/asakhar/rmce"
description = "Implementation of Classic McEliece cryptosystem in Rust"

[lib]
path = "src/lib.rs"

[dependencies]
arrayref = "0.3.7"
boxed-array = "0.1.0"
cfor = "1.1.0"
lazy_static = "1.4.0"
log = "0.4.17"
openssl = { version = "0.10.52", optional = true, default_features = false }
serde = { version = "1.0.160", optional = true, features = ["derive"] }

[features]
default = ["openssl", "serde"]
openssl = ["dep:openssl"]
serde = ["dep:serde"]
